# rncc

./: .gitignore  Makefile.am  configure.ac
include/: def.h  error.h  format.h  io-assert.h  io-buffered-in.h  io-buffered-out.h  io-dynamic-out.h  io-fd-in.h  io-fd-out.h  io-in.h  io-out.h  io-static-out.h  io-std.h  io-stynamic-out.h  location.h  recstack.h  rncc.h  uri.h
lib/: #format.c#  _io_assert_print.c  error.c  format.c  io_buffered_in_init.c  io_buffered_out_init.c  io_dynamic_out_init.c  io_fd_in_init.c  io_fd_out_init.c  io_feed.c  io_in_close.c  io_out_close.c  io_print.c  io_printv.c  io_read.c  io_read_once.c  io_static_out_init.c  io_std.c  io_stynamic_out_init.c  io_write.c  io_write_z.c  location.c  rncc.y  uri.c
src/: rncc.c  rncc.y
tests/: decl.at  local.at  rncc.in  tap.h  testsuite.at
tests/lib/: uri.c
tests/src/: rncc.c
